--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <ul id="messages"></ul>
+        <ul id="messages">
+            
+        </ul>
         <div class="elem">
         <input type="text" id="input"><button onclick="sendMessage()">Send</button>
     </div></div>
